@@ -1,6 +1,6 @@
 /*********************************************************************
  *                
- * Copyright (C) 2007,  Goedson Teixeira Paixao
+ * Copyright (C) 2007, 2009,  Goedson Teixeira Paixao
  *                
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -22,7 +22,7 @@
  * Description:   GnoTime's status icon implementation
  *                
  * Created at:    Fri Oct 12 11:45:39 2007
- * Modified at:   Fri Oct 12 22:43:57 2007
+ * Modified at:   Sun Nov 15 12:25:41 2009
  * Modified by:   Goedson Teixeira Paixao <goedson@debian.org>
  ********************************************************************/
 
@@ -30,6 +30,8 @@
 #include <gnome.h>
 #include "status-icon.h"
 #include "timer.h"
+
+extern GtkWidget *app_window;  /* global top-level window */
 
 static GtkStatusIcon *status_icon;
 static gboolean timer_active;
@@ -47,12 +49,34 @@ status_icon_activated(GtkStatusIcon *status_icon, gpointer data)
 	}
 }
 
+static void
+status_icon_menuitem_visibility(GtkWidget *toggle, gpointer *user_data)
+{
+    if (GTK_WIDGET_VISIBLE(app_window))
+        gtk_widget_hide(app_window);
+    else
+        gtk_widget_show(app_window);
+}
+
+static void
+status_icon_popup_menu(GtkStatusIcon *status_icon, guint button, guint activate_time, gpointer user_data)
+{
+    GtkWidget *menu = gtk_menu_new ();
+    GtkWidget *menuitem = gtk_check_menu_item_new_with_mnemonic (_("_Hide to Notification Area"));
+	gtk_check_menu_item_set_active (GTK_CHECK_MENU_ITEM (menuitem), !GTK_WIDGET_VISIBLE(app_window));
+	g_signal_connect (G_OBJECT (menuitem), "toggled", G_CALLBACK (status_icon_menuitem_visibility), NULL);
+	gtk_menu_shell_append (GTK_MENU_SHELL (menu), menuitem);
+	gtk_widget_show_all (menu);
+    gtk_menu_popup (menu, NULL, NULL, NULL, NULL, button, activate_time);
+}
+
 void
 gtt_status_icon_create()
 {
 	status_icon = gtk_status_icon_new_from_stock (GNOME_STOCK_TIMER_STOP);
 	gtk_status_icon_set_tooltip (status_icon, _("Timer is not running"));
 	g_signal_connect (G_OBJECT(status_icon), "activate", G_CALLBACK(status_icon_activated), NULL);
+	g_signal_connect (G_OBJECT(status_icon), "popup-menu", G_CALLBACK(status_icon_popup_menu), NULL);
 }
 
 void
@@ -80,3 +104,4 @@ gtt_status_icon_stop_timer(GttProject *prj)
 	gtk_status_icon_set_from_stock (status_icon, GNOME_STOCK_TIMER_STOP);
 	timer_active = FALSE;
 }
+
