@@ -1,3 +1,9 @@
+2009-11-15  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/status-icon.c, src/menucmd.c: Add ability to hide main
+	window by right clicking the status icon. Thanks Kip Warner for
+	the patch.
+
 2009-09-17  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* src/projects-tree.c (gtt_projects_tree_set_visible_columns):
